--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-pip install rpy2
-pip install tqdm
-pip install pandas-datareader
+pip install rpy2==3.3.5
+pip install eli5==0.10.1
+pip install pandas-datareader==0.9.0
+pip install pandas==1.1.3
+pip install numpy==1.18.1
+pip install ipywidgets==7.5.1
 conda install -c conda-forge nodejs
-pip install ipywidgets
 jupyter nbextension enable --py widgetsnbextension
 jupyter labextension install @jupyter-widgets/jupyterlab-manager
