--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pip install eli5==0.10.1
 pip install numpy==1.18.1
 pip install pandas==1.1.3
 pip install pandas-datareader==0.9.0
+pip install statsmodels==0.12.1
 pip install ipywidgets==7.5.1
 conda install -c conda-forge nodejs
 jupyter nbextension enable --py widgetsnbextension
