--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ pip install pandas-datareader==0.9.0
 pip install statsmodels==0.12.1
 pip install ipywidgets==7.5.1
 pip install itertools
+conda install -c anaconda ephem
+conda install -c conda-forge pystan
+conda install -c conda-forge fbprophet
 conda install -c conda-forge nodejs
 jupyter nbextension enable --py widgetsnbextension
 jupyter labextension install @jupyter-widgets/jupyterlab-manager
