--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 pip install rpy2==3.3.5
-pip install eli5==0.10.1
-pip install numpy==1.18.1
-pip install pandas==1.1.3
+pip install scipy==1.5.3
+pip install sklearn==0.24.1
+pip install eli5==0.11.0
+pip install numpy==1.20.1
+pip install pandas==1.1.5
 pip install pandas-datareader==0.9.0
 pip install statsmodels==0.12.1
 pip install ipywidgets==7.5.1
